--- a/src/main/resources/templates/productos/edit.html
+++ b/src/main/resources/templates/productos/edit.html
@@ -6,9 +6,6 @@
 </head>
 <body>
 
-
-
-
 <nav th:fragment="nav" aria-label="breadcrumb">
     <ol class="breadcrumb my-3">
         <li class="breadcrumb-item"><a href="#">Inicio</a></li>
@@ -17,8 +14,6 @@
         <li class="breadcrumb-item active" aria-current="page">Crear</li>
     </ol>
 </nav>
-
-
 
 
 <th:block th:fragment="content">
@@ -37,7 +32,7 @@
 
                 <div class="form-group">
                     <label for="id_categoria">Categor&iacute;a</label>
-                    <select id="id_categoria" name="categoria.id" th:field="*{categoria.id}" class="form-control" required="required">
+                    <select id="id_categoria" name="categoria" th:field="*{categoria}" class="form-control" required="required">
                         <option th:each="categoria : ${categorias}" value="" th:value="${categoria.id}" th:text="${categoria.nombre}">Catería</option>
                     </select>
                 </div>
@@ -94,4 +89,3 @@
 
 </body>
 </html>
-
