--- a/src/main/resources/templates/productos/edit.html
+++ b/src/main/resources/templates/productos/edit.html
@@ -32,7 +32,7 @@
 
                 <div class="form-group">
                     <label for="id_categoria">Categor&iacute;a</label>
-                    <select id="id_categoria" name="categoria" th:field="*{categoria}" class="form-control" required="required">
+                    <select id="id_categoria" name="categoria.id" th:field="*{categoria.id}" class="form-control" required="required">
                         <option th:each="categoria : ${categorias}" value="" th:value="${categoria.id}" th:text="${categoria.nombre}">Catería</option>
                     </select>
                 </div>
