--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -46,22 +46,22 @@
                         <li><a class="dropdown-item" th:href="@{/categorias}">Categorías</a></li>
                         <li><a class="dropdown-item" th:href="@{/productos}">Productos</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Reportes</a></li>
+                        <li><a class="dropdown-item" th:href="@{/reportes}">Reportes</a></li>
                     </ul>
                 </li>
 
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sing Up</a>
+                    <a class="nav-link" th:href="@{/singup}">Sing Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" th:href="@{/profile}">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/logout}">Logout</a>
