--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{layouts/default :: layout(~{::title}, _, _, ~{::content})}">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Página Principal</title>
 </head>
 <body>
-$END$
+<th:block th:fragment="content">
+  <div class="mt-5 col-md-4 offset-md-4 col-sm-8 offset-sm-2">
+    <div class="card card-default" >
+      <div class="card-header">
+        Bienvenido a la aplicaci&oacute;n
+      </div>
+    </div>
+  </div>
+</th:block>
 </body>
 </html>
+
