--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -17,7 +17,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#" th:href="@{/home/}">
+        <a class="navbar-brand" href="#" th:href="@{/}">
             <img src="//cdnjs.cloudflare.com/ajax/libs/topcoat-icons/0.1.0/svg/cart.svg" width="30" height="30" class="d-inline-block align-top" alt="">
             Tienda Online
         </a>
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
+                    <a class="nav-link" th:href="@{/}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
