--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:fragment="layout (title, assets, nav, content)">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      th:fragment="layout (title, assets, nav, content)">
 
 <head>
     <meta charset="utf-8">
@@ -34,7 +36,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" sec:authorize="hasAnyAuthority('Administrador')">
                     <a class="nav-link dropdown-toggle"
                        href="#"
                        role="button"
@@ -51,7 +53,7 @@
                 </li>
 
             </ul>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav" sec:authorize="isAnonymous()">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/singup}">Sing Up</a>
                 </li>
@@ -59,7 +61,7 @@
                     <a class="nav-link" th:href="@{/login}">Login</a>
                 </li>
             </ul>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav" sec:authorize="isAuthenticated()">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/profile}">Profile</a>
                 </li>
